namespace Data.Extentions.ExtentionModels;
public class ApplicationOptions
{
    public string ConnectionString { get; set; } = string.Empty;
}
